@@ -69,6 +69,11 @@ operation may fail when using such an incompatible client.
     <td valign="top">The file in which to write the diff report.</td>
     <td align="center" valign="top">Yes</td>
   </tr>
+  <tr>
+    <td valign="top">ignoreRemoved</td>
+    <td valign="top">When set to true, the report will not include any
+      removed files.  <em>Since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No, defaults to false.</td>
 </table>
 
 <h3>Parameters inherited from the <code>cvs</code> task</h3>
